Pagina dos cavaleiros excluida

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="#">Home</a></li>
-                <li><a href="./cavaleiros.html">Cavaleiros</a></li>
+                <li><a href="#">Cavaleiros</a></li>
             </ul>
         </nav>
     </header>
